# torch-mlir

./: CMakeLists.txt  README.Fedora.41.MacOS.Sequoia.md  setup.py
build-scripts/: build-torch-mlir-linux.sh  build-torch-mlir-macos.sh  build-torch-mlir-python-wheel-linux.sh  build-torch-mlir-python-wheel-macos.sh  install-torch-mlir-linux.sh  install-torch-mlir-macos.sh  run-cmake-configure-linux.sh  run-cmake-configure-macos.sh  torch-mlir-0.0.2.spec
build_tools/cmake/: TorchMLIRPyTorch.cmake
cmake/Modules/: FindONNX.cmake
include/torch-mlir-dialects/Dialect/TMTensor/IR/: CMakeLists.txt
include/torch-mlir/Conversion/: CMakeLists.txt
include/torch-mlir/Conversion/TorchOnnxToTorch/: CMakeLists.txt
include/torch-mlir/Dialect/Torch/IR/: CMakeLists.txt
include/torch-mlir/Dialect/Torch/Transforms/: CMakeLists.txt
include/torch-mlir/Dialect/TorchConversion/IR/: CMakeLists.txt  TorchConversionBase.td  TorchConversionDialect.td
lib/: CMakeLists.txt  InitAll.cpp
lib/Dialect/Torch/IR/: CMakeLists.txt
lib/Dialect/Torch/Transforms/: CMakeLists.txt
patches/: torch-mlir-patch-20260308.patch
projects/: CMakeLists.txt
projects/onnx_c_importer/: CMakeLists.txt  Dict.hpp  FindONNX.cmake  OnnxImporter.cpp  OnnxImporter.cpp.crippled  OnnxImporter.h  import-onnx-main.cpp  onnx_extras.hpp.linux
python/: CMakeLists.txt
